--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,55 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    text-align: center;
+    background-color: cornsilk;
+    margin: 0 auto;
+    max-width: 500px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* ====================================
+    ADD USER Component
+======================================= */
+.input-first-name,
+.input-last-name {
+    padding: 7px;
+    margin-bottom: 10px;
+}
+
+.add-user {
+    padding: 10px 30px;
+    margin-bottom: 10px;
+}
+
+/* ====================================
+    User Component
+======================================= */
+
+
+.card-user {
+    box-shadow: inset 0 0 10px;;
+    /* border: 1px solid black; */
+    padding: 20px;
+    padding-bottom: 50px;
+    margin-bottom: 5px;
+    background-color: peachpuff;
+}
+
+.modify-user,
+.delete-user, 
+.modify-input {
+    padding: 8px;
+    gap: 10px;
+    margin-left: 10px;
+    border: none;
+}
+
+.modify-user {
+    background-color: lime;
+    cursor: pointer;
+
+}
+.delete-user {
+    background-color: red;
+    cursor: pointer;
+
 }
